--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "live-server": "^0.9.2"
   },
   "scripts": {
-    "postinstall": "jspm install"
+    "postinstall": "jspm install",
+    "test": "karma start karma.conf.js",
+    "test-single-run": "karma start karma.conf.js --single-run"
   }
 }
